[package]
name = "bombom-launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
# Tauri 2.0 Ana Çekirdeği
tauri = { version = "2.0", features = [] }

# Güncellenmiş Kararlı HTTP İstemcisi
reqwest = { version = "0.12", features = ["cookies", "json"] }
tokio = { version = "1", features = ["full"] }

# JSON ve Serde Kütüphaneleri
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
